# YandexCodeforcesAnalyzer

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  settings.py
.github/workflows/: cd.yml  ci.yml  ci_workflow.yml  codeql.yml  pylint.yml
backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  conftest.py  mypy.ini  pytest.ini  requirements.txt  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 12f56568cd5b_.py  13d0ccb1e8d6_.py  1644f4a001ec_.py  240bb27e187a_.py  3f0bce44b4c3_.py  3f1fdec7d630_.py  444be839825c_.py  4b75f732e6d8_.py  4cfea7bf1906_.py  579596ae2e6a_.py  5de419ad6525_.py  640889134935_.py  77859dae1440_.py  7f17656a3690_.py  b2c3d4e5f6a7_ai_session_extensions.py  c3d4e5f6a7b8_plagiarism_ban_threshold.py  d0c719498027_.py  d4e5f6a7b8c9_ai_session_chat_log.py  e5f6a7b8c9d0_ai_session_problem_type.py
backend/api/: __init__.py  auth.py  health.py  schemas.py  user_api.py
backend/api/crypt/: __init__.py  crypt_password.py  jwt_token.py  token.py
backend/api/pydantic_schemas/: __init__.py
backend/api/user/: __init__.py  contests.py  merge_submissions.py  merge_table.py
backend/app/: __init__.py  database.py  logging_config.py  server.py
backend/app/middlewares/: log_middleware.py
backend/codeforces_parser/api/: __init__.py  api_base.py  request_signer.py  response.py  standings.py  submissions.py
backend/codeforces_parser/api_cf/: api_base.py  request_signer.py  response.py  results_parser.py  standings.py  submission_parser.py  submissions.py
backend/codeforces_parser/parse_results/: results_parser.py
backend/codeforces_parser/parse_submissions/: submission_parser.py
backend/logs/: __init__.py  logs.py
backend/models/: __init__.py  alembic.ini  base.py  contest.py  contest_participant.py  contest_result.py  pair_of_banned_submissions.py  participant.py  participant_attempt.py  refresh_token.py  role.py  submission.py  task.py  task_result.py  user.py
backend/models/ai/: ai_generated_file.py  ai_session.py
backend/models/contest/: __init__.py  contest.py  contest_participant.py  task.py  task_result.py
backend/models/participant/: __init__.py  participant.py
backend/models/plagiarism/: __init__.py  pair_of_banned_submissions.py  plagiarism_report.py
backend/models/submissions/: __init__.py  pair_of_banned_submissions.py  plagiarism_report.py  submission.py
backend/models/task/: __init__.py  checker.py  generated_file.py  generator.py  problem.py  script.py  session.py  solution.py  statement.py  test.py  test_group.py  validator.py
backend/models/user/: __init__.py  refresh_token.py  role.py  user.py
backend/plagiarism/: CMakeLists.txt  main.cpp
backend/plagiarism/ast/: ast_analyzer.cpp  ast_analyzer.h  ast_features.h  ast_hashing.cpp  ast_hashing.h  ast_tree.h  call_graph.cpp  call_graph.h
backend/plagiarism/metrics/: levenshtein_similarity.cpp
backend/plagiarism/models/: metrics.h  programming_language.h  similar_submission_pair.h  similarity_result.h  submission.h  submission_data.h  submission_features.h  submission_finally.h  token.h  token_features.h  winnowing_features.h
backend/plagiarism/outdated_metrics/: levenshtein_similarity.cpp  levenshtein_similarity.h
backend/plagiarism/preprocessing/: alias_expander.cpp  alias_expander.h  comments.cpp  comments.h  cpp_preprocessor.cpp  cpp_preprocessor.h  dead_code_stripper.cpp  dead_code_stripper.h  line_endings.cpp  line_endings.h  lines.cpp  lines.h  llvm_ir_pipeline.cpp  llvm_ir_pipeline.h  namespace_stripper.cpp  namespace_stripper.h  normalize.cpp  normalize.h  string_normalizer.cpp  string_normalizer.h
backend/plagiarism/similarity/: bindings.cpp  compare_submissions.cpp  compare_submissions.h  lsh.cpp  lsh.h  metrics.cpp  metrics.h  winnowing.cpp  winnowing.h
backend/plagiarism/submission_builder/: submission_builder.cpp  submission_builder.h  submission_stages.cpp  submission_stages.h
backend/plagiarism/submission_loader/: submission_loader.cpp  submission_loader.h
backend/plagiarism/tokenizer/: normalize_tokens.cpp  normalize_tokens.h  token_features_builder.cpp  token_features_builder.h  tokenizer.cpp  tokenizer.h
backend/tests/api_tests/: test_base.py
backend/tests/unit/: conftest.py  test_merge_submissions.py  test_merge_table.py  test_settings.py
backend/yandex_parser/: appCredentials.py
backend/yandex_parser/api/: __init__.py  apiBase.py  api_base.py  login.py  problems.py  standings.py  submissions.py
backend/yandex_parser/api_ya/: api_base.py  login.py  problems.py  results_parser.py  standings.py  submission_parser.py  submissions.py
backend/yandex_parser/parse_results/: results_parser.py
backend/yandex_parser/parse_submissions/: submissionParser.py  submission_parser.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: instance.ts
frontend/src/components/: AuthInitializer.tsx  CodeEditor.tsx  Pagination.tsx  SiteFooter.tsx  TaskForgeLogo.tsx  ThemeInitializer.tsx  ThemeToggle.tsx  freemarker.ts
frontend/src/constants/: aiModels.ts
frontend/src/pages/: AITaskSession.tsx  AITasks.tsx  AITasksList.tsx  ArchiveImportPage.tsx  Docs.tsx  (+21 more)
(+429 files in other folders)
